# emu-utilities

./: .gitignore  README.md  pyproject.toml
emu_utilities/: __init__.py  adjoint_gradient.py  attribution.py  budget.py  convolution.py  emu_utilities.py  forward_gradient.py  resample.py  sampling.py  tracer.py
emu_utilities/grid_data/: AngleCS.data  AngleSN.data  DXC.data  DXG.data  DYC.data  DYG.data  RAC.data  RAS.data  RAW.data  RAZ.data  XG.data  YG.data
