[project]
name = "emu-utilities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "pyresample>=1.34.1",
    "xarray[io]>=2025.4.0",
    "xmitgcm>=0.5.2",
]

[tool.ruff.lint.isort]
known-first-party = ["emu_utilities", "resample"]

[dependency-groups]
viz = ["ipykernel>=6.29.5", "matplotlib>=3.10.3"]
